--- a/app/src/main/res/layout/fragment_manager_account.xml
+++ b/app/src/main/res/layout/fragment_manager_account.xml
@@ -82,6 +82,26 @@
                             android:layout_marginStart="@dimen/_10sdp"
                             tools:ignore="RtlCompat" />
                     </LinearLayout>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvAccountEditProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_12sdp"
+                        android:background="@drawable/back_border_white"
+                        android:includeFontPadding="false"
+                        android:paddingStart="@dimen/_10sdp"
+                        android:paddingTop="@dimen/_3sdp"
+                        android:paddingEnd="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_3sdp"
+                        android:text="@string/edit_profile"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_10ssp"
+                        app:fontFamily="@font/poppins_medium"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:ignore="RtlCompat"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
@@ -96,40 +116,38 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:gravity="center_vertical"
                         android:paddingEnd="@dimen/_12sdp">
-
                         <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/recent_event"
-                            app:fontFamily="@font/poppins_light"
-                            android:includeFontPadding="false"
-                            android:textColor="@color/white"
-                            />
-                        <View
+                            android:id="@+id/tvRecentEvent"
                             android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvAccountEditProfile"
-                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginEnd="@dimen/_2sdp"
                             tools:ignore="RtlCompat"
-                            android:text="@string/edit_profile"
+                            android:text="@string/recent_event"
+                            android:textSize="@dimen/_10ssp"
+                            app:fontFamily="@font/poppins_medium"
+                            android:includeFontPadding="false"
+                            android:textColor="@color/colorBlackText"
+                            android:textAlignment="center"
+                            android:padding="@dimen/_3sdp"
+                            android:background="@drawable/back_round_white"/>
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvPastEvent"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginStart="@dimen/_2sdp"
+                            tools:ignore="RtlCompat"
+                            android:text="@string/past_event"
                             android:textSize="@dimen/_10ssp"
                             app:fontFamily="@font/poppins_medium"
                             android:includeFontPadding="false"
                             android:textColor="@color/white"
                             android:textAlignment="center"
-                            android:paddingTop="@dimen/_3sdp"
-                            android:paddingBottom="@dimen/_3sdp"
-                            android:paddingStart="@dimen/_10sdp"
-                            android:paddingEnd="@dimen/_10sdp"
+                            android:padding="@dimen/_3sdp"
                             android:background="@drawable/back_border_white"/>
                     </LinearLayout>
-
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerHomeRecentEventEvents"
                         android:layout_width="match_parent"
