--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -67,6 +67,7 @@
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollSearch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +101,7 @@
                 />
 
             <LinearLayout
+                android:id="@+id/linearSearchByLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/_10sdp"
@@ -118,6 +120,7 @@
                     android:src="@drawable/search_white" />
 
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edtSearchByLocation"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
@@ -135,18 +138,51 @@
                     android:hint="@string/search_by_location"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:textColorHint="@color/colorHintTex"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:editable="false"/>
 
             </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <FrameLayout
+                android:id="@+id/frameMap"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_190sdp"
-                app:srcCompat="@drawable/dummy_map"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="@dimen/_5sdp"/>
+                android:layout_height="@dimen/_150sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp">
+
+                <fragment
+                    android:id="@+id/map"
+                    android:name="com.jaylax.wiredshack.utils.AppMapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <!--<LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationViewLottie"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/_30sdp"
+                        android:alpha="0.4"
+                        android:visibility="gone"
+                        app:lottie_fileName="location.json"
+                        app:lottie_loop="true" />
+
+                </LinearLayout>-->
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imageCurrentLocation"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_gravity="end|bottom"
+                    android:layout_margin="@dimen/_15sdp"
+                    android:src="@drawable/ic_current_location_add" />
+
+            </FrameLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerSearchSuggestion"
